Prepare for Java 25+: prefer ReflectionFactory over sun.misc.Unsafe
- Unsafe.java now tries ReflectionFactory.newConstructorForSerialization() first
  (same mechanism as ObjectInputStream), falling back to sun.misc.Unsafe
- ReflectionFactory produces safer objects (runs Object init, fields get defaults)
- sun.misc.Unsafe kept as fallback since ReflectionFactory package
  (jdk.internal.reflect) may not be accessible without --add-opens
- Serialization constructors cached per class in ConcurrentHashMap
- ClassUtilities.setUseUnsafe() API preserved for backward compatibility

Co-Authored-By: Claude <noreply@anthropic.com>